tests/backend/checkmach/test_assume_fail.output
File "test_assume_fail.ml", line 5, characters 5-15:
Error: Annotation check for zero_alloc strict failed on function Test_assume_fail.foo (camlTest_assume_fail.foo_HIDE_STAMP)

File "test_assume_fail.ml", line 5, characters 32-37:
Error: direct tailcall camlTest_assume_fail.bar_HIDE_STAMP on a path to exceptional return may allocate

File "test_assume_fail.ml", line 12, characters 5-15:
Error: Annotation check for zero_alloc strict failed on function Test_assume_fail.foo' (camlTest_assume_fail.foo'_HIDE_STAMP)

File "test_assume_fail.ml", line 12, characters 33-39:
Error: direct call camlCamlinternalFormat.make_printf_HIDE_STAMP on a path to exceptional return may allocate (test_assume_fail.ml:12,33--39;test_assume_fail.ml:9,25--53;printf.ml:47,18--43;printf.ml:45,2--31)

File "test_assume_fail.ml", line 12, characters 33-39:
Error: indirect call on a path to exceptional return may allocate (test_assume_fail.ml:12,33--39;test_assume_fail.ml:9,25--53)
